# ComfyUI-AV-MegaTTS3

./: .gitignore  LICENSE  MegaTTS3.py  README.md  node.py  pyproject.toml
.github/workflows/: publish_action.yml
example_workflow/: MegaTTS3-AV.json
